# tamago-project

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
docs/: installation.md  usage.md
docs/en/: installation.md  usage.md
src/tamago/: __init__.py  cli.py  config.py  i18n.py  llm.py  memory.py  prompts.py  training_data.py
src/tamago/backends/: __init__.py  anthropic_backend.py  base.py  llamacpp_backend.py  ollama_backend.py  openai_backend.py
src/tamago/templates/: memory_template.md
